Fix img overflow
In mobile view.

--- a/public/css/_sass/_articles.scss
+++ b/public/css/_sass/_articles.scss
@@ -15,5 +15,9 @@ article {
     color: $gray;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   max-width: $max-content-width;
 }
